[fix] (ABC-912): Fix invisible calendar interval background

--- a/src/modules/base/calendar/calendar.css
+++ b/src/modules/base/calendar/calendar.css
@@ -103,6 +103,10 @@ lightning-combobox {
     font-weight: var(--avonni-calendar-week-label-font-weight, 600);
 }
 
+.avonni-calendar__table {
+    z-index: 0;
+}
+
 .avonni-calendar__table-row > .avonni-calendar__date-cell:hover > .slds-day {
     background-color: var(
         --avonni-calendar-date-color-background-hover,
